--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-counters": "^1.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-ionicons": "^4.6.5",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.10.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
