Revenue cat has been added

--- a/eas.json
+++ b/eas.json
@@ -3,7 +3,11 @@
     "android": {
       "release": {
         "workflow": "generic"
-      }
+      },
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    }
     },
     "ios": {
       "release": {
