--- a/package.json
+++ b/package.json
@@ -7,41 +7,39 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.9",
-    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "@sentry/react-native": "^4.7.1",
-    "expo": "^46.0.16",
-    "expo-application": "~4.0.0",
-    "expo-constants": "~12.1.3",
-    "expo-device": "~4.0.3",
-    "expo-splash-screen": "~0.13.3",
-    "expo-status-bar": "~1.1.0",
-    "expo-updates": "^0.14.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.1",
-    "react-native": "^0.68.2",
-    "react-native-counters": "^1.2.0",
-    "react-native-file-logger": "^0.4.0",
-    "react-native-gesture-handler": "~1.10.2",
+    "@sentry/react-native": "4.2.2",
+    "eas-cli": "^3.7.2",
+    "expo": "^47.0.0",
+    "expo-application": "~5.0.1",
+    "expo-constants": "~14.0.2",
+    "expo-device": "~5.0.0",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.0",
+    "react-native-counters": "1.2.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-health": "^1.13.0",
-    "react-native-iap": "^12.4.2",
-    "react-native-ionicons": "^4.6.5",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-ionicons": "4.6.5",
+    "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-paper": "^4.10.0",
-    "react-native-purchases": "^5.2.0",
-    "react-native-reanimated": "^2.12.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-step-indicator": "^1.0.3",
-    "react-native-table-component": "1.2.2",
+    "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
-    "sentry-expo": "^4.0.0"
+    "react-native-web": "~0.18.7",
+    "sentry-expo": "~5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
